resolved all the errors